k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-node
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-node
  template:
    metadata:
      labels:
        app: media-node
    spec:
      containers:
        - name: media-node
          image: adenli/media-node:a87c083
          ports:
            - containerPort: 3002
