k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-node
  namespace: dev
spec:
  selector:
    app: media-node
  ports:
    - port: 3002
      targetPort: 3002
