k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-node
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dev.callforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: media-node
                port:
                  number: 3002
